hosts 文件修改工具

--- a/Conven/Info.plist
+++ b/Conven/Info.plist
@@ -2,17 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-    <!-- 网络传输安全 -->
-    <key>NSAppTransportSecurity</key>
-    <dict>
-        <key>NSAllowsArbitraryLoads</key>
-        <true/>
-    </dict>
-    
-    <!-- 传出连接（客户端）权限 -->
-    <key>com.apple.security.network.client</key>
-    <true/>
-    
-    <!-- 其他现有配置... -->
+    <key>NSAppleEventsUsageDescription</key>
+    <string>本应用需要管理员权限来修改系统 Hosts 文件，以便您能管理域名解析规则。</string>
+
 </dict>
 </plist>
